[metadata]
description-file = README.md
name = winchester
version = 0.5
author = Monsyne Dragon
author_email = mdragon@rackspace.com
summary = An OpenStack notification event processing library.
license = Apache-2
keywords =
    stacktach
    event_processing
    pipeline
    events
    notification
    openstack
    triggers

classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 2.7

home-page = https://github.com/stackforge/stacktach-winchester

[files]
packages =
    winchester

[entry_points]
console_scripts =
    pipeline_worker = winchester.worker:main
    winchester_db=winchester.db.db_admin:main
